# refactor-example

./: .coverage 2  .dockerfile  .gitignore  README.rst  inventory_items.json  orders.http  pyproject.toml  scripts.py
refactor_example/: inventory.py  main.py  order.py  receipt.py  receipt_formatter.py  receipt_printer.py  utils.py
refactor_example/api/: app.py
refactor_example/orders/: order.py
refactor_example/orders/output/: receipt_formatter.py  utils.py
tests/: receipt_formatter.py  test_api.py  test_inventory_item.py  test_main.py  test_order.py  test_order_printer.py  test_receipt_formatter.py  test_refactor_example.py
