[tool.poetry]
name = "refactor-example"
version = "0.1.0"
description = ""
authors = ["jshore_ironscales <jshore@ironscales.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = {version = "^22.3.0", allow-prereleases = true}
ipykernel = "^6.13.0"
jupyter = "^1.0.0"
mypy = "^0.950"
pytest-it = "^0.1.4"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
testing = "scripts:testing"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

