[tool.poetry]
name = "refactor-example"
version = "0.1.0"
description = ""
authors = ["jshore_ironscales <jshore@ironscales.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = {version = "^22.3.0", allow-prereleases = true}
ipykernel = "^6.13.0"
mypy = "^0.950"
pytest-it = "^0.1.4"
pytest-cov = "^3.0.0"
ipython = "^8.3.0"
bpython = "^0.22.1"

[tool.poetry.scripts]
testing = "scripts:testing"
main = "refactor_example.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

